Fixed a bug where, if the screen was too large, the image would not fit into the entire screen

--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -7,6 +7,14 @@ button {
   text-align: center;
 }
 
+html { 
+  background: url(../images/blue_bg.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 
 /* CSS */
 .button-43 {
